# projector-control

./: .gitignore  README.md  config.json  pyproject.toml
.github/workflows/: main.yml
ents_projector_control/: controller.py  projector.py  utils.py
