[tool.poetry]
name = "ents-projector-control"
version = "0.2.0"
description = ""
authors = ["Ryan Delaney <vitineth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
projector-control = "ents_projector_control.controller:main"